# Sentry26

./: .gitignore  CLAUDE.md  README.md
.sisyphus/: boulder.json
.sisyphus/evidence/: final-verification.txt  frequency-calibration.md  intra-process-evaluation.md  task-22-terrain-not-composable.md
.sisyphus/notepads/jazzy-migration/: learnings.md
.sisyphus/plans/: jazzy-migration.md
logs/: README.md
src/auto_aim_interfaces/: README.md
src/docs/: ARCHITECTURE.md  QUICKSTART.md  REMOTE_DEBUG.md  RUNNING_MODES.md  TUNING_GUIDE.md
src/odom_interpolator/config/: odom_interpolator.yaml
src/rm_interfaces/: CMakeLists.txt  README.md  package.xml
src/rm_interfaces/msg/: RobotStateInfo.msg
src/scripts/: fix_build.sh  fix_nav2_deps.sh  fix_ros_env.sh  setup_env.sh
src/scripts/debug/: analyze_bag.py  archive_log.sh  clean_logs.sh  grep_log.sh  record_nav_bag.sh  tail_log.sh
src/sentry_behavior/: README.md  dependencies.repos  package.xml
src/sentry_behavior/behavior_trees/: Project.btproj  models.xml
src/sentry_behavior/plugins/action/: battlefield_information.cpp  pursuit.cpp
src/sentry_behavior/plugins/condition/: is_detect_enemy.cpp
src/sentry_behavior/plugins/control/: recovery_node.cpp
src/sentry_behavior/plugins/decorator/: rate_controller.cpp
src/sentry_behavior/src/: sentry_behavior_server.cpp
src/sentry_motion_manager/: CMakeLists.txt  README.md  package.xml
src/sentry_motion_manager/config/: motion_manager.yaml
src/sentry_motion_manager/include/sentry_motion_manager/: motion_manager_node.hpp  motion_types.hpp  recovery_state_machine.hpp  stuck_detector.hpp  stuck_detector_node.hpp
src/sentry_motion_manager/launch/: motion_manager_launch.py
src/sentry_motion_manager/src/: motion_manager_node.cpp  recovery_state_machine.cpp  stuck_detector.cpp  stuck_detector_node.cpp
src/sentry_motion_manager/test/: recovery_state_machine_test.cpp  stuck_detector_test.cpp
src/sentry_nav/: Dockerfile  README.md
src/sentry_nav/fake_vel_transform/src/: fake_vel_transform.cpp
src/sentry_nav/nav2_plugins/: CMakeLists.txt  NOTICE  README.md  behavior_plugin.xml  package.xml
src/sentry_nav/odom_bridge/: README.md  package.xml
src/sentry_nav/odom_bridge/src/: odom_bridge.cpp
src/sentry_nav/omni_pid_pursuit_controller/: CMakeLists.txt
src/sentry_nav/omni_pid_pursuit_controller/src/: omni_pid_pursuit_controller.cpp
src/sentry_nav/point_lio/: CMakeLists.txt
src/sentry_nav/sentry_dual_mid360/: CMakeLists.txt  README.md  package.xml
src/sentry_nav/sentry_dual_mid360/config/: livox_driver_dual_override.yaml  mid360_user_config_dual.json  pointcloud_merger_params.yaml
src/sentry_nav/sentry_dual_mid360/docs/: ARCHITECTURE.md  CALIBRATION_QUICKSTART.md  PCD_MIGRATION.md  SYNC_VERIFICATION.md
src/sentry_nav/sentry_dual_mid360/env-hooks/: xmacro_path.dsv.in
src/sentry_nav/sentry_dual_mid360/include/pointcloud_merger/: merger_node.hpp  sim_pointcloud_to_custommsg_node.hpp
src/sentry_nav/sentry_dual_mid360/launch/: dual_mid360_driver_launch.py  pointcloud_merger_launch.py  sim_custommsg_bridge_launch.py
src/sentry_nav/sentry_dual_mid360/scripts/: analyze_map_odom_stability.py  calibrate_dual_mid360.sh  preview_real_xmacro.sh  qa_merger_latency.py  qa_odom_bridge_dual.py  record_calib_bag.sh  test_real_dual_mid360_static.sh  test_sim_dual_mid360.sh  verify_dual_mid360_sync.py
src/sentry_nav/sentry_dual_mid360/scripts/calib/: calibrate_dual_mid360.sh  record_calib_bag.sh  verify_dual_mid360_sync.py
src/sentry_nav/sentry_dual_mid360/scripts/codegen/: generate_pointlio_overrides.py  verify_pointlio_overrides_fresh.py
src/sentry_nav/sentry_dual_mid360/scripts/e2e/: test_real_dual_mid360_static.sh  test_sim_dual_mid360.sh
src/sentry_nav/sentry_dual_mid360/scripts/qa/: analyze_map_odom_stability.py  analyze_static_drift.py  qa_merger_latency.py  qa_odom_bridge_dual.py  qa_terrain_coverage.py
src/sentry_nav/sentry_dual_mid360/scripts/tools/: lidar_only_debug.sh  preview_real_xmacro.sh
src/sentry_nav/sentry_dual_mid360/src/: merger_node.cpp  sim_pointcloud_to_custommsg_node.cpp
src/sentry_nav/sentry_dual_mid360/urdf/: back_mid360.sdf.xmacro  back_mid360_sim.sdf.xmacro  mid360_imu_tf.sdf.xmacro  secondary_mid360.sdf.xmacro  secondary_mid360_sim.sdf.xmacro
src/sentry_nav/sentry_nav/: package.xml
src/sentry_nav/small_gicp_relocalization/src/: small_gicp_relocalization.cpp
src/sentry_nav/teleop_twist_joy/: CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
src/sentry_nav/teleop_twist_joy/config/: xbox.config.yaml
src/sentry_nav/teleop_twist_joy/launch/: teleop_twist_joy_launch.py
src/sentry_nav/teleop_twist_joy/src/: teleop_twist_joy.cpp
src/sentry_nav_bringup/: README.md  package.xml
src/sentry_nav_bringup/behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
src/sentry_nav_bringup/config/reality/: nav2_params.yaml
src/sentry_nav_bringup/config/simulation/: nav2_params.yaml
src/sentry_nav_bringup/launch/: bringup_launch.py  joy_teleop_launch.py  localization_launch.py  navigation_launch.py  rm_multi_navigation_simulation_launch.py  rm_navigation_reality_launch.py  rm_navigation_simulation_launch.py  rm_sentry_launch.py  robot_state_publisher_launch.py  rviz_launch.py  slam_launch.py
src/sentry_nav_bringup/rviz/: nav2_default_view.rviz
src/sentry_robot_description/: README.md  dependencies.repos  package.xml
src/sentry_robot_description/launch/: robot_description_launch.py
src/sentry_robot_description/params/: robot_description.yaml
src/sentry_robot_description/resource/xmacro/: wheeled_biped.sdf.xmacro  wheeled_biped_core.sdf.xmacro  wheeled_biped_real.sdf.xmacro  wheeled_biped_sim.sdf.xmacro
src/sentry_tools/: README.md  protocol.py  sentry_toolbox.py  serial_visualizer.py
src/serial/serial_driver/: CMakeLists.txt  README.md  package.xml
src/serial/serial_driver/example/: navigation_auto.h
src/serial/serial_driver/protocol/: protocol.yaml
src/simulator/rmu_gazebo_simulator/: README.md
(+47 files in other folders)
