<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sentry_dual_mid360</name>
  <version>0.1.0</version>
  <description>Dual Mid360 pointcloud fusion and assets for Sentry26.</description>
  <maintainer email="boombroke@icloud.com">Boombroke</maintainer>
  <license>Apache-2.0</license>
  <author email="boombroke@icloud.com">Boombroke</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_auto</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>livox_ros_driver2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>message_filters</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_black</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
